--- a/DatabaseConnector/DatabaseConnector.csproj
+++ b/DatabaseConnector/DatabaseConnector.csproj
@@ -2,6 +2,19 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <RepositoryUrl>https://github.com/zzzrst/DatabaseConnector</RepositoryUrl>
+    <RepositoryType>Git</RepositoryType>
+    <Description>Connects to database to perform basic operations.</Description>
+    <PackageId>DatabaseConnectorAbstraction</PackageId>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>.\DatabaseConnector.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>.\DatabaseConnector.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
