--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -31,7 +31,9 @@ jobs:
       with:
         dotnet-version: 2.2.108
     - name: Run Unit Tests
-      run: dotnet test --verbosity normal
+      run: |
+        docker run -d -p 8080:8080 -p 1521:1521 --name OracleDB store/oracle/database-enterprise:12.2.0.1-slim
+        dotnet test --verbosity normal --configuration Release
       
   automerge:
     needs: [build,test]
